fix text-wrap

--- a/less/util.less
+++ b/less/util.less
@@ -97,7 +97,8 @@ hr.separator {
 
 .text-wrap {
   text-overflow: ellipsis;
-  //overflow: hidden;
+  overflow: hidden;
+  line-height: 1.2em;
   white-space: nowrap;
 }
 
